--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,6 @@ framework = arduino
 upload_protocol = arduino
 upload_speed = 57600
 upload_flags = -D
+
+[env]
+lib_deps = apechinsky/MemoryFree@^0.3.0
